Fix Vite dependency conflicts for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
   "env": {
     "NODE_ENV": "production"
   },
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public"
 }
