--- a/vercel.json
+++ b/vercel.json
@@ -3,26 +3,18 @@
   "builds": [
     {
       "src": "server/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["dist/**"]
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "server/index.ts"
-    },
-    {
       "src": "/(.*)",
-      "dest": "dist/public/$1"
+      "dest": "server/index.ts"
     }
   ],
   "env": {
     "NODE_ENV": "production"
   },
   "installCommand": "npm install",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist/public"
+  "buildCommand": "npm run build"
 }
